<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="20dp"
    android:padding="20dp"
    android:id="@+id/dialogForgot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialogBox"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/white_box">

        <TextView
            android:id="@+id/shareTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/light_blue_round"
            android:drawablePadding="8dp"
            android:padding="10dp"
            android:text="@string/share_title"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:drawableLeftCompat="@drawable/baseline_share_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_email_share"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="#1E90FF"
            app:layout_constraintTop_toBottomOf="@id/shareTitle"
            app:layout_constraintBottom_toTopOf="@id/emailBox"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/emailBox"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/signup_email"
            android:maxLines="1"
            android:minHeight="48dp"
            android:backgroundTint="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shareTitle"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/btnCancel"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:text="@string/cancel_share"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius="30dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#1E90FF"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailBox"
            app:layout_constraintBottom_toBottomOf="@id/dialogBox"
            app:layout_constraintEnd_toStartOf="@id/btnShare"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/btnShare"
            android:text="@string/share"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:textColor="@color/white"
            android:backgroundTint="#1E90FF"
            android:textSize="14sp"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/dialogBox"
            app:layout_constraintStart_toEndOf="@id/btnCancel" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>