<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="0dp"
        android:layout_marginTop="24dp"
        android:background="@null"
        android:contentDescription="@string/backButton"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="385dp"
        android:layout_height="763dp"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/uploadImageTitle"
            android:layout_width="394dp"
            android:layout_height="67dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:scaleType="center"
            android:src="@drawable/upload_image_title" />

        <ImageView
            android:id="@+id/uploadImage"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="2dp"
            android:scaleType="fitXY"
            android:src="@drawable/upload_image" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="208dp"
            android:layout_height="94dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/light_blue"
            android:visibility="invisible" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/uploadCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edittext"
                android:hint="@string/addNote"
                android:padding="16dp"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/uploadButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="end|center_vertical"
                android:background="@null"
                android:contentDescription="@string/uploadButton"
                android:scaleType="centerInside"
                android:src="@drawable/baseline_send_24"
                app:tint="@color/blue" />

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>